--- a/index.html
+++ b/index.html
@@ -11,7 +11,6 @@
     <svg style="display: none">
       <symbol id="logotype-blue-desktop" viewBox="0 0 146.3 40.37">
         <path
-          fill="#283645"
           d="M71.87 18.66a1.29 1.29 0 011.26-1.29h7.18c5.09 0 8.44 2.7 8.44 7.15v.06c0 4.86-4.06 7.37-8.85 7.37h-5.48v6.82a1.27 1.27 0 11-2.55 0V18.66zm8.11 11c3.73 0 6.18-2 6.18-5v-.06c0-3.22-2.41-4.89-6.05-4.89h-5.7v9.92H80zM93.6 18.5a1.27 1.27 0 112.54 0v20.28a1.27 1.27 0 11-2.54 0zM102.74 18.53a1.28 1.28 0 011.26-1.25h.35a1.56 1.56 0 011.29.74l13.68 17.45v-17a1.24 1.24 0 112.48 0v20.35a1.14 1.14 0 01-1.15 1.18h-.13a1.73 1.73 0 01-1.32-.77l-14-17.87v17.46a1.24 1.24 0 11-2.48 0V18.53zM128.17 18.5a1.27 1.27 0 112.54 0v12.33l12.85-13.17a1.45 1.45 0 011-.45 1.27 1.27 0 011.22 1.26 1.25 1.25 0 01-.42.9l-8 7.92 8.56 10.56a1.41 1.41 0 01.35.94 1.31 1.31 0 01-1.27 1.28 1.22 1.22 0 01-1-.58L135.59 29l-4.86 4.86v4.9a1.27 1.27 0 11-2.54 0V18.5z" />
         <path
           fill="#d22856"
@@ -20,7 +19,6 @@
           fill="#d22856"
           d="M60.46 28L55.29 6.65C54.93 4.3 52.69 0 46.69 0a1.5 1.5 0 100 3c4.86 0 5.58 3.73 5.64 4.14l4.77 19.7H55a12 12 0 00-5.31-8.52 2.5 2.5 0 00-1.53 2.3 2 2 0 010 .26A9 9 0 1135 24.36a2 2 0 01-1.85-2 .74.74 0 00-.19-.49 12 12 0 00-1.79 5h-1.82a12 12 0 00-23.85 0H3.42L8.19 7.14C8.25 6.73 9 3 13.83 3a1.5 1.5 0 100-3c-6 0-8.24 4.3-8.6 6.65L.05 28a1.42 1.42 0 001.43 1.83h4a11.93 11.93 0 00.39 1.83.73.73 0 00.1-.35 2 2 0 012-2 2 2 0 01.48.06 8.33 8.33 0 01-.07-1 9 9 0 119 9A9 9 0 0112 35.58a2 2 0 01-1.3.49.75.75 0 00-.75.75 2 2 0 01-.18.81 12 12 0 0019.54-7.79h1.81a12 12 0 0023.85 0h4A1.42 1.42 0 0060.46 28z" />
         <path
-          fill="#283645"
           d="M50.69 16.12a4.5 4.5 0 01-4.5-4.5 4.5 4.5 0 01-4.5 4.5 4.5 4.5 0 014.5 4.5 4.5 4.5 0 014.5-4.5zM37.9 19.63a2.75 2.75 0 01-2.75-2.75 2.75 2.75 0 01-2.75 2.75 2.75 2.75 0 012.75 2.75 2.75 2.75 0 012.75-2.75zM10.73 34.07A2.75 2.75 0 018 31.32a2.75 2.75 0 01-2.75 2.75A2.75 2.75 0 018 36.82a2.75 2.75 0 012.73-2.75z" />
       </symbol>
       <symbol id="logotype-white-desktop" viewBox="0 0 146.3 40.37">
@@ -35,14 +33,8 @@
           fill="#d22856"
           d="M50.69 16.12a4.5 4.5 0 01-4.5-4.5 4.5 4.5 0 01-4.5 4.5 4.5 4.5 0 014.5 4.5 4.5 4.5 0 014.5-4.5zM37.9 19.63a2.75 2.75 0 01-2.75-2.75 2.75 2.75 0 01-2.75 2.75 2.75 2.75 0 012.75 2.75 2.75 2.75 0 012.75-2.75zM10.73 34.07A2.75 2.75 0 018 31.32a2.75 2.75 0 01-2.75 2.75A2.75 2.75 0 018 36.82a2.75 2.75 0 012.73-2.75z" />
       </symbol>
-      <symbol id="logotype-blue-tablet-glasses">
-        <path
-          fill="#d22856"
-          d="M60.951 27.761L55.734 6.586c-.364-2.327-2.615-6.592-8.669-6.592a1.5 1.5 0 00-1.513 1.487c0 .821.677 1.486 1.513 1.486 4.895 0 5.62 3.696 5.685 4.107l4.805 19.525h-2.089c-.749-5.874-5.85-10.437-12.025-10.437-6.175 0-11.277 4.563-12.024 10.437h-1.834c-.748-5.874-5.85-10.437-12.025-10.437-6.175 0-11.276 4.563-12.024 10.437h-2.09L8.25 7.074c.063-.411.789-4.107 5.685-4.107.835 0 1.512-.665 1.512-1.486a1.5 1.5 0 00-1.512-1.487c-6.055 0-8.306 4.265-8.669 6.592L.048 27.761c-.268 1.099.536 1.81 1.438 1.81.012 0 .023.004.037.004h4.014c.747 5.873 5.849 10.437 12.024 10.437 6.175 0 11.276-4.564 12.024-10.437h1.829c.748 5.873 5.849 10.437 12.024 10.437 6.175 0 11.277-4.564 12.025-10.437h4.014c.012 0 .023-.004.036-.004.903 0 1.706-.711 1.438-1.81zm-34.426 1.812c-.72 4.234-4.456 7.464-8.968 7.464s-8.246-3.23-8.969-7.464a8.889 8.889 0 01-.135-1.487c0-.507.053-1.002.135-1.487.721-4.232 4.457-7.463 8.969-7.463s8.247 3.231 8.968 7.463c.083.485.137.98.137 1.487 0 .507-.054 1.003-.137 1.487zm25.885 0c-.722 4.234-4.457 7.464-8.969 7.464-4.511 0-8.247-3.23-8.968-7.464a8.785 8.785 0 01-.136-1.487c0-.507.053-1.002.136-1.487.722-4.232 4.457-7.463 8.968-7.463 4.512 0 8.248 3.231 8.969 7.463.082.485.136.98.136 1.487 0 .507-.054 1.003-.136 1.487z" />
-      </symbol>
-      <symbol id="logotype-blue-tablet-text">
-        <path
-          d="M147 38.704c0 .68-.573 1.296-1.277 1.296-.479 0-.803-.261-1.025-.584l-8.353-10.522-4.836 4.888v4.922c0 .712-.575 1.296-1.279 1.296-.673 0-1.25-.584-1.25-1.296V18.306h-.005c0-.712.576-1.295 1.249-1.295a1.29 1.29 0 011.279 1.295v12.399l12.776-13.24c.288-.259.576-.454.992-.454.672 0 1.218.616 1.218 1.263 0 .356-.161.647-.417.906l-7.94 7.964 8.516 10.619c.224.292.352.55.352.941zm-25.508 1.228h-.128c-.545 0-.931-.323-1.31-.777L106.156 21.19v17.545c0 .681-.544 1.265-1.251 1.265-.672 0-1.216-.584-1.216-1.265V18.338h-.002c0-.68.577-1.263 1.249-1.263h.353c.577 0 .929.292 1.281.744l13.607 17.547V18.274c0-.68.543-1.263 1.248-1.263.672 0 1.219.583 1.219 1.263v20.461c0 .681-.477 1.197-1.152 1.197zm-25.646.064c-.672 0-1.248-.582-1.248-1.294V18.306c0-.712.576-1.295 1.248-1.295.705 0 1.281.583 1.281 1.295v20.396a1.29 1.29 0 01-1.281 1.294zm-14.882-8.16H75.52v6.862c0 .713-.577 1.294-1.282 1.294-.672 0-1.249-.583-1.249-1.294l.002-20.23c0-.712.577-1.295 1.249-1.295h7.14c5.058 0 8.388 2.719 8.388 7.186v.063c0 4.886-4.034 7.414-8.804 7.414zm6.242-7.376c0-3.24-2.4-4.921-6.019-4.921H75.52v9.971h5.539v-.002c3.714 0 6.147-2.007 6.147-4.986z" />
+      <symbol id="logotype-blue-tablet">
+        <path fill="#d22856" d="M60.951 27.761L55.734 6.586c-.364-2.327-2.615-6.592-8.669-6.592a1.5 1.5 0 00-1.513 1.487c0 .821.677 1.486 1.513 1.486 4.895 0 5.62 3.696 5.685 4.107l4.805 19.525h-2.089c-.749-5.874-5.85-10.437-12.025-10.437-6.175 0-11.277 4.563-12.024 10.437h-1.834c-.748-5.874-5.85-10.437-12.025-10.437-6.175 0-11.276 4.563-12.024 10.437h-2.09L8.25 7.074c.063-.411.789-4.107 5.685-4.107.835 0 1.512-.665 1.512-1.486a1.5 1.5 0 00-1.512-1.487c-6.055 0-8.306 4.265-8.669 6.592L.048 27.761c-.268 1.099.536 1.81 1.438 1.81.012 0 .023.004.037.004h4.014c.747 5.873 5.849 10.437 12.024 10.437 6.175 0 11.276-4.564 12.024-10.437h1.829c.748 5.873 5.849 10.437 12.024 10.437 6.175 0 11.277-4.564 12.025-10.437h4.014c.012 0 .023-.004.036-.004.903 0 1.706-.711 1.438-1.81zm-34.426 1.812c-.72 4.234-4.456 7.464-8.968 7.464s-8.246-3.23-8.969-7.464a8.889 8.889 0 01-.135-1.487c0-.507.053-1.002.135-1.487.721-4.232 4.457-7.463 8.969-7.463s8.247 3.231 8.968 7.463c.083.485.137.98.137 1.487 0 .507-.054 1.003-.137 1.487zm25.885 0c-.722 4.234-4.457 7.464-8.969 7.464-4.511 0-8.247-3.23-8.968-7.464a8.785 8.785 0 01-.136-1.487c0-.507.053-1.002.136-1.487.722-4.232 4.457-7.463 8.968-7.463 4.512 0 8.248 3.231 8.969 7.463.082.485.136.98.136 1.487 0 .507-.054 1.003-.136 1.487z"/><path d="M147 38.704c0 .68-.573 1.296-1.277 1.296-.479 0-.803-.261-1.025-.584l-8.353-10.522-4.836 4.888v4.922c0 .712-.575 1.296-1.279 1.296-.673 0-1.25-.584-1.25-1.296V18.306h-.005c0-.712.576-1.295 1.249-1.295a1.29 1.29 0 011.279 1.295v12.399l12.776-13.24c.288-.259.576-.454.992-.454.672 0 1.218.616 1.218 1.263 0 .356-.161.647-.417.906l-7.94 7.964 8.516 10.619c.224.292.352.55.352.941zm-25.508 1.228h-.128c-.545 0-.931-.323-1.31-.777L106.156 21.19v17.545c0 .681-.544 1.265-1.251 1.265-.672 0-1.216-.584-1.216-1.265V18.338h-.002c0-.68.577-1.263 1.249-1.263h.353c.577 0 .929.292 1.281.744l13.607 17.547V18.274c0-.68.543-1.263 1.248-1.263.672 0 1.219.583 1.219 1.263v20.461c0 .681-.477 1.197-1.152 1.197zm-25.646.064c-.672 0-1.248-.582-1.248-1.294V18.306c0-.712.576-1.295 1.248-1.295.705 0 1.281.583 1.281 1.295v20.396a1.29 1.29 0 01-1.281 1.294zm-14.882-8.16H75.52v6.862c0 .713-.577 1.294-1.282 1.294-.672 0-1.249-.583-1.249-1.294l.002-20.23c0-.712.577-1.295 1.249-1.295h7.14c5.058 0 8.388 2.719 8.388 7.186v.063c0 4.886-4.034 7.414-8.804 7.414zm6.242-7.376c0-3.24-2.4-4.921-6.019-4.921H75.52v9.971h5.539v-.002c3.714 0 6.147-2.007 6.147-4.986z"/>
       </symbol>
       <symbol id="logotype-white-tablet" viewBox="0 0 146.3 40.38">
         <path
@@ -82,7 +74,7 @@
           </a>
           <button class="main-navigation__toggle" type="button">
             <span class="visually-hidden">Кнопка открытия и закрытия меню</span>
-            <svg class="main-navigation__toggle-icon" width="50" height="24" fill="#fff">
+            <svg class="main-navigation__toggle-icon" width="50" height="24" fill="#fff" focusable="false">
               <use class="main-navigation__toggle-hamburger" href="#hamburger-icon"></use>
               <use class="main-navigation__toggle-cross" href="#cross-icon"></use>
             </svg>
@@ -92,10 +84,10 @@
               <a class="site-list__link site-list__link--active">Главная</a>
             </li>
             <li class="site-list__item">
-              <a class="site-list__link" href="#">Фотографии</a>
+              <a class="site-list__link" href="photo.html">Фотографии</a>
             </li>
             <li class="site-list__item">
-              <a class="site-list__link" href="#">Конкурс</a>
+              <a class="site-list__link" href="form.html">Конкурс</a>
             </li>
             <li class="site-list__item">
               <a class="site-list__link" href="#">HTML Academy</a>
@@ -385,14 +377,14 @@
     <footer class="page-footer">
       <div class="page-footer__wrapper">
         <a class="page-footer__logo-link" href="#" focusable="false">
-          <svg class="page-footer__logo" width="147" height="40">
-            <use class="page-footer__logo-glasses" href="#logotype-blue-tablet-glasses"></use>
-            <use class="page-footer__logo-text" href="#logotype-blue-tablet-text"></use>
+          <svg class="page-footer__logo" width="147" height="40" fill="#283645" focusable="false">
+            <use class="page-footer__logo-tablet" href="#logotype-blue-tablet"></use>
+            <use class="page-footer__logo-desktop" href="#logotype-blue-desktop"></use>
           </svg>
         </a>
         <ul class="page-footer__social social-list">
           <li class="social-list__item">
-            <a class="social-list__link social-list__link--twitter">
+            <a class="social-list__link social-list__link--twitter" href="#">
               <span class="visually-hidden">Твиттер</span>
             </a>
           </li>
@@ -418,5 +410,6 @@
         </p>
       </div>
     </footer>
+    <script src="js/picturefill.js"></script>
   </body>
 </html>
